# platform.core.connectivity.net-config

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  net-config.manifest  net-config.rule  project.config
debian/: changelog  control  net-config.install.in  net-config.postinst  rules
include/: cellular-state.h  clatd-handler.h  dbus.h  emulator.h  log.h  mdm-private.h  netconfig.h  netdbus.h  neterror.h  netsupplicant.h  network-accessibility.h  network-clock.h  network-dpm.h  network-monitor.h  network-state.h  network-statistics.h  signal-handler.h  util.h  vpnsvc-internal.h  vpnsvc.h  wifi-agent.h  wifi-background-scan.h  wifi-config.h  wifi-dump.h  wifi-eap-config.h  wifi-eap.h  wifi-firmware.h  wifi-indicator.h  wifi-passpoint.h  wifi-power.h  wifi-ssid-scan.h  wifi-state.h  wifi-tdls.h  wifi-tel-intf.h  wifi-wps.h  wifi.h
interfaces/: netconfig-iface-network-state.xml  netconfig-iface-network-statistics.xml  netconfig-iface-vpnsvc.xml  netconfig-iface-wifi.xml
packaging/: net-config.changes  net-config.service  net-config.spec
resources/etc/: resolv.conf
resources/etc/dbus-1/system.d/: net-config.conf
resources/etc/rc.d/init.d/: net-config
resources/opt/etc/: resolv.conf
resources/opt/etc/dump.d/module.d/: network_dump.sh  network_log_dump.sh
resources/usr/etc/dbus-1/system.d/: net-config.conf
resources/usr/lib/systemd/system/: net-config.service  net-config_tv.service
resources/usr/lib/udev/rules.d/: 99-wifiusb-dev.rules
resources/usr/sbin/: net-config.service
resources/usr/share/: wifi_offloading.sql
resources/usr/share/dbus-1/services/: net.netconfig.service
resources/usr/share/dbus-1/system-services/: net.netconfig.service
resources/usr/system/RestoreDir/softreset/: network_softreset.sh
resources/usr/system/RestoreDir/softreset_post/: network_reset_post.sh
resources/usr/system/RestoreDir/softreset_prepare/: network_reset_pre.sh
src/: cellular-state.c  clatd-handler.c  dbus.c  emulator.c  main.c  neterror.c  network-clock.c  network-dpm.c  network-monitor.c  network-state.c  network-statistics.c  signal-handler.c  util.c  vpnsvc-internal.c  vpnsvc.c  wifi-agent.c  wifi-background-scan.c  wifi-config.c  wifi-dump.c  wifi-eap-config.c  wifi-eap.c  wifi-firmware.c  wifi-indicator.c  wifi-passpoint.c  wifi-power.c  wifi-ssid-scan.c  wifi-state.c  wifi-tdls.c  wifi-tel-intf.c  wifi-wps.c  wifi.c
src/dbus/: netdbus.c  netsupplicant.c
src/utils/: emulator.c  log.c  mdm-private.c  network-accessibility.c  util.c
